--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2525,7 +2525,7 @@ p.has-text-color a {
 	line-height: 1;
 	position: absolute;
 	top: 4px;
-	right: 0;
+	right: -20px;
 }
 
 .wp-block-quote p {
@@ -2614,8 +2614,8 @@ p.has-text-color a {
 .wp-block-quote.is-style-large::before, .wp-block-quote.is-large::before {
 	font-size: 5rem;
 	position: absolute;
-	top: 6px;
-	right: -15px;
+	top: 2px;
+	right: -20px;
 }
 
 .wp-block-rss {
